2008-02-09  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c:
	(totem_embedded_set_logo_by_name):
	Avoid warnings when hidden

2008-02-08  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_load_media):
	Fix message when trying to play DVB and plugins are missing

2008-02-08  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_can_play):
	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_can_play):
	* src/backend/bacon-video-widget.h:
	Change the API to give a more detailed information as to why it
	can't play a specific media

	* src/totem.c: (totem_action_load_media):
	Better error message depending on the retval of _can_play()

2008-02-08  Bastien Nocera  <hadess@hadess.net>

	* data/totem.ui:
	* src/totem.c: (totem_action_toggle_aspect_ratio):
	Fix to make totem_action_toggle_aspect_ratio() work again

2008-02-08  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_handle_scroll):
	Don't assert when doing a mouse scroll in windowed mode
	(Closes: #515063)

2008-02-07  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_can_play), (bacon_video_widget_get_mrls):
	Enumerate the DVD titles using dvdreadsrc, and create a list
	of MRLs to play this back (Closes: #321709), check for the
	presence of dvdreadsrc to see whether we support DVD playback

	* src/totem-menu.c: (totem_action_add_recent): Don't add directories
	to the recent files

	* src/totem.c: (totem_action_load_media_device): Don't use the URL
	from TotemDisc to get the DVD MRL, use the backend instead

2008-02-07  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: Add support for yes/no
	arguments, Fix the VLC plugin not playing anything on the
	http://mediathek.zdf.de/ website, uses the "target" parameter
	instead of src

2008-02-07  Bastien Nocera  <hadess@hadess.net>
