@@ -1,3 +1,8 @@
+2008-02-09  Philip Withnall  <pwithnall@svn.gnome.org>
+
+	* src/totem.c: (totem_action_load_media),
+	(totem_action_toggle_aspect_ratio): Fix some compile warnings.
+
 2008-02-09  Bastien Nocera  <hadess@hadess.net>
 
 	* browser-plugin/totem-plugin-viewer.c:
